Blender crashes when solving motion tracking with negative frame positions. #72009

Closed
opened 2019-11-28 13:23:52 +01:00 by Malte S · 5 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.28

Blender Version
Broken: version: 2.81
Broken: version: 2.82 (sub 2), branch: master, commit date: 2019-11-27 20:26, hash: 4659fa5471
Worked: (optional)

Short description of error
Blender crashes when solving motion tracking with negative frame positions.

Exact steps for others to reproduce the error
Just open the attached file and klick “Solve Camera Motion”DadoTracking.blend

I believe the problem starts with importing the images as Clip. When sort by Date is enabled it picks the first image for frame 1 (in my case image 23).
Open.png
Then blender checks if the number from the second image is higher or smaller. (in my case 22, so smaller).
Now blender puts the second image at frame 0.
This results in, my footage Settings showing me a frame range from -21/1
Settings.png
To solve the tracking, I had to enter for Keyframe A -21 and for B 1. But as soon as I click “Solve Camera Motion” Blender crashes.
Solve.png

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.28 **Blender Version** Broken: version: 2.81 Broken: version: 2.82 (sub 2), branch: master, commit date: 2019-11-27 20:26, hash: `4659fa5471` Worked: (optional) **Short description of error** Blender crashes when solving motion tracking with negative frame positions. **Exact steps for others to reproduce the error** Just open the attached file and klick “Solve Camera Motion”[DadoTracking.blend](https://archive.blender.org/developer/F8174889/DadoTracking.blend) I believe the problem starts with importing the images as Clip. When sort by Date is enabled it picks the first image for frame 1 (in my case image 23). ![Open.png](https://archive.blender.org/developer/F8174891/Open.png) Then blender checks if the number from the second image is higher or smaller. (in my case 22, so smaller). Now blender puts the second image at frame 0. This results in, my footage Settings showing me a frame range from -21/1 ![Settings.png](https://archive.blender.org/developer/F8174893/Settings.png) To solve the tracking, I had to enter for Keyframe A -21 and for B 1. But as soon as I click “Solve Camera Motion” Blender crashes. ![Solve.png](https://archive.blender.org/developer/F8174897/Solve.png)
Author

Added subscriber: @pandrodor

Added subscriber: @pandrodor
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Member

Can confirm.
Looks like both issues need to be solved [importing image sequences as well as the crash for negative frames...]

CC @Sergey

Can confirm. Looks like both issues need to be solved [importing image sequences as well as the crash for negative frames...] CC @Sergey
Sergey Sharybin self-assigned this 2019-12-02 12:01:52 +01:00
Sergey Sharybin was unassigned by Dalai Felinto 2019-12-23 13:42:01 +01:00
Sergey Sharybin self-assigned this 2020-05-13 15:39:28 +02:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

The crash is fixed in 2b36cf3118.

The frame offset I think is working as expected: whatever frame you selected is supposed to be at scene frame 1. There is no logic in Blender which looks at the second frame, everything is done based on the file name you've selected. Also, if the frame offset is deducted wrong, you can adjust it in the Footage settings.

So thanks for the report. The crash is fixed, the frame offset seems actually behave the way it is designed to (and if automatic magic fails, you can always adjust it manually).

The crash is fixed in 2b36cf3118. The frame offset I think is working as expected: whatever frame you selected is supposed to be at scene frame 1. There is no logic in Blender which looks at the second frame, everything is done based on the file name you've selected. Also, if the frame offset is deducted wrong, you can adjust it in the Footage settings. So thanks for the report. The crash is fixed, the frame offset seems actually behave the way it is designed to (and if automatic magic fails, you can always adjust it manually).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72009
No description provided.